# messanger

./: CMakeLists.txt
client/: CMakeLists.txt
server/: CMakeLists.txt  db.db-journal
server/include/: DatabaseManager.h
server/src/: DatabaseManager.cpp  main.cpp
src/: main.cpp
